feat: adds address http calls
