# docs/swagger.yaml
@@ -2,23 +2,32 @@ basePath: /
 definitions:
   models.AddressInfo:
     properties:
-      address_line_1:
-        type: string
-      address_line_2:
-        type: string
-      city:
-        type: string
       country:
+        type: string
+      district:
         type: string
       full_address:
         type: string
+      house:
+        type: string
       id:
         type: string
-      postal_code:
+      landmark:
+        type: string
+      pincode:
+        type: string
+      post_office:
         type: string
       state:
         type: string
+      street:
+        type: string
+      subdistrict:
+        type: string
       type:
+        type: string
+      vtc:
+        description: Village/Town/City
         type: string
     type: object
   models.AppliedTax:
@@ -193,29 +202,33 @@ definitions:
     type: object
   models.CreateAddressRequest:
     properties:
-      address_line_1:
-        type: string
-      address_line_2:
-        type: string
-      city:
-        type: string
       country:
+        type: string
+      district:
+        type: string
+      house:
         type: string
       is_primary:
         type: boolean
-      postal_code:
+      landmark:
+        type: string
+      pincode:
+        type: string
+      post_office:
         type: string
       state:
+        type: string
+      street:
+        type: string
+      subdistrict:
         type: string
       type:
         description: HOME, WORK, OTHER
         type: string
+      vtc:
+        description: Village/Town/City
+        type: string
     required:
-    - address_line_1
-    - city
-    - country
-    - postal_code
-    - state
     - type
     type: object
   models.CreateBankPaymentRequest:
@@ -1691,23 +1704,32 @@ definitions:
     type: object
   models.UpdateAddressRequest:
     properties:
-      address_line_1:
-        type: string
-      address_line_2:
-        type: string
-      city:
-        type: string
       country:
+        type: string
+      district:
+        type: string
+      house:
         type: string
       id:
         type: string
       is_primary:
         type: boolean
-      postal_code:
+      landmark:
+        type: string
+      pincode:
+        type: string
+      post_office:
         type: string
       state:
         type: string
+      street:
+        type: string
+      subdistrict:
+        type: string
       type:
+        type: string
+      vtc:
+        description: Village/Town/City
         type: string
     required:
     - id
